trunk/Archive2/7a/dde548cce6509f/output
main.cpp:8:22: error: cannot initialize a variable of type 'alias<int (int)> *' (aka 'int (*)(int)') with an lvalue of type 'int (int, int)': different number of parameters (1 vs 2)
    alias<int(int)>* h = f; // error
                     ^   ~
1 error generated.
